# gpm-tui

./: .gitignore  README.md  main.py  pyproject.toml
gpm_ssd/: __main__.py  app.py  domain.py  exceptions.py  manager.py  menu.py  models.py
gpm_ssd/managers/: __init__.py  auth_handler.py  data_loader.py  goals_manager.py  group_goals_manager.py  groups_manager.py  topics_manager.py  ui_helpers.py
tests/: test_app.py  test_domain.py  test_exceptions.py  test_menu.py
validation/: dataclasses.py
