[project]
name = "gpm-ssd25"
version = "0.1.0"
description = ""
authors = [
    {name = "gpm-ssd25", email = "gpm.ssd25@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typeguard>=4.4.1,<5.0.0",
    "valid8>=5.1.2,<6.0.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "coverage>=7.6.7,<8.0.0",
]