[project]
name = "gpm-ssd"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typeguard>=4.4.1,<5.0.0",
    "valid8>=5.1.2,<6.0.0",
    "requests (>=2.32.5,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest (>=9.0.1,<10.0.0)"
]