[tool.poetry]
name = "gpm-tui"
version = "0.1.0"
description = "Group Project Manager TUI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "gpm_ssd"}, {include = "validation"}]

[tool.poetry.dependencies]
python = "^3.11"
valid8 = "^5.1.2"
typeguard = "^4.4.1"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"